<resources>
    <string name="app_name">Education</string>
    <string name="enter_course_id">Enter Course Id</string>
    <string name="register_as_teacher">Register as Teacher</string>
    <string name="user_name">User Name :</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="password">Password :</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account ?   </string>
    <string name="register"> Register</string>
    <string name="register_as_student">Register as Student</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="new_course">New Course</string>
    <string name="course_name">Course Name</string>
    <string name="quizes_grades">Quizes Grades</string>
    <string name="project_grades">Project Grades</string>
    <string name="attendance_grades">Attendance Grades</string>
    <string name="confirm_to_create_course">Confirm to Create Course</string>
    <string name="Required_msg">Required</string>
    <string name="course_not_found">Course not found</string>
    <string name="Course_Added_Successfully">Course Added Successfully</string>
    <string name="Courses_Are_Founded">" Courses Are Founded"</string>
    <string name="nocoursesfounded">No Courses Founded</string>
    <string name="generate_code">generate code</string>
    <string name="confirm">Confirm</string>
    <string name="suc">Success</string>
    <string name="fal">Failed</string>
    <string name="notvalid_code">attendance code is not valid</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="add_new_quiz">Add New Quiz</string>
    <string name="no_of_questions">no of Questions</string>
    <string name="attendance_code">attendance code</string>
    <string name="chat">chat</string>
    <string name="grades">Grades</string>
    <string name="material">Material</string>
    <string name="solve_quiz">Solve Quiz</string>
    <string name="enter_your_massage">Enter your massage</string>
    <string name="open">OPEN</string>
    <string name="copy_id">Copy Id</string>
    <string name="course_control_page">Course control panel</string>
    <string name="attendance">Attendance</string>
    <string name="generate_code_to_attendace">generate code to attendace</string>
    <string name="quizes">Quizzes</string>
    <string name="creat_new_quiz">Creat new quiz</string>
    <string name="upload_matriel">upload matriel</string>
    <string name="show_grades">show grades</string>
    <string name="copied">Copied to clipboard</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="the_question">The Question</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="correct_answer">correct answer</string>
    <string name="full_all">Please Full all Fields</string>
    <string name="exist_quiz">Quiz name is already exist</string>
    <string name="ans_all">Please Answer all Questions</string>
    <string name="solve">You Already Solve This Quiz</string>
    <string name="attendance_times">Attendance Times : </string>
    <string name="solved_quizzes">Solved Quizzes :</string>
    <string name="nodata">No Data to display</string>
    <string name="download">DownLoad</string>
</resources>