<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.teacher.Create_CourseFragment">

    <TextView
        android:id="@+id/create_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="80sp"
        android:layout_marginStart="50sp"
        />
    <TextView
        android:id="@+id/course_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_txt"
        android:text="@string/new_course"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="20sp"
        />

    <ImageView
        android:id="@+id/course_img"
        android:layout_width="150sp"
        android:layout_height="150sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/course_txt"
        android:src="@drawable/classroom"
        android:layout_marginTop="30sp"
        android:layout_marginHorizontal="20sp"
        />
    <EditText
        android:id="@+id/cousre_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/course_img"
        app:layout_constraintStart_toStartOf="@id/course_txt"
        app:layout_constraintEnd_toEndOf="@id/course_img"
        android:layout_marginTop="50sp"
        android:background="@drawable/edittext"
        android:hint="@string/course_name"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/attend_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cousre_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50sp"
        android:background="@drawable/edittext"
        android:hint="@string/attendance_grades"
        android:inputType="number"
        android:digits="0123456789"
        android:textSize="15sp"
        app:layout_constraintWidth_percent="0.3"
        android:gravity="center"
        android:layout_marginHorizontal="10sp"
        />
    <EditText
        android:id="@+id/project_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cousre_name_edit"
        app:layout_constraintStart_toEndOf="@id/attend_edit"
        android:layout_marginTop="50sp"
        android:background="@drawable/edittext"
        android:hint="@string/project_grades"
        android:inputType="number"
        android:digits="0123456789"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.3"
        android:layout_marginHorizontal="10sp"
        />

    <EditText
        android:id="@+id/quiz_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cousre_name_edit"
        app:layout_constraintStart_toEndOf="@id/project_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp"
        android:background="@drawable/edittext"
        android:hint="@string/quizes_grades"
        android:inputType="number"
        android:digits="0123456789"
        android:textSize="15sp"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.3"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_course_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/project_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittext"
        app:backgroundTint="@color/toolbarcolor"
        android:text="@string/confirm_to_create_course"
    />




</androidx.constraintlayout.widget.ConstraintLayout>