<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.StudRegFragment">

    <ImageView
        android:id="@+id/std_reg_img"
        android:layout_width="150sp"
        android:layout_height="150sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/graduated"
        android:layout_marginTop="30sp"
        />



    <TextView
        android:id="@+id/stdreg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/std_reg_img"
        android:text="@string/register_as_student"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"
        />


    <EditText
        android:id="@+id/stdreg_usr_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdreg_txt"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/user_name"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:background="@drawable/edittext2"
        android:textStyle="bold"
        android:inputType="textAutoComplete"
        android:layout_marginHorizontal="15sp"
        />


    <EditText
        android:id="@+id/stdreg_mail_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdreg_usr_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittext2"
        android:layout_marginHorizontal="15sp"
        android:hint="@string/email"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/stdreg_phone_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdreg_mail_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittext2"
        android:hint="@string/phone"
        android:layout_marginHorizontal="15sp"
        android:textStyle="bold"
        android:inputType="phone"
        android:gravity="center"
        android:layout_marginTop="30sp"
        />


    <EditText
        android:id="@+id/stdreg_pass_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdreg_phone_edit"
        android:background="@drawable/edittext2"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        android:gravity="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_marginTop="30sp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/stdreg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stdreg_pass_edit"
        android:layout_marginTop="40sp"
        app:layout_constraintWidth_percent=".6"
        android:backgroundTint="@color/toolbarcolor"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="18sp"
        app:cornerRadius="30sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>