<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">


    <ImageView
        android:id="@+id/edu_img_login"
        android:layout_width="220sp"
        android:layout_height="220sp"
        android:src="@drawable/training2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp"
        />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edu_img_login"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/edittext2"
        android:textStyle="bold"
        android:hint="@string/email"
        android:gravity="center"
        android:layout_marginTop="50sp"
        />


    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="0dp"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittext2"
        android:hint="@string/password"
        android:gravity="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="50sp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_edit"
        android:layout_marginTop="40sp"
        app:layout_constraintWidth_percent=".6"
        android:gravity="center"
        android:backgroundTint="@color/toolbarcolor"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="18sp"
        app:cornerRadius="30sp"
        />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="30sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"

        />
    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txt1"
        app:layout_constraintBottom_toBottomOf="@id/txt1"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="5sp"
        android:textColor="@color/toolbarcolor"
        />

    <ProgressBar
        android:id="@+id/bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit"
        />



</androidx.constraintlayout.widget.ConstraintLayout>