<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="3"
tools:context=".ui.teacher.CouseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.3"
        android:drawableEnd="@drawable/settings"
        android:gravity="center"
        android:text="@string/course_control_page"
        android:textStyle="bold"
        android:textSize="24sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#000"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="2.4"
    android:weightSum="2"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3.7"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/makeattandecbuttoniddoctor"
                android:layout_width="100sp"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/approve"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/attendance"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/generate_code_to_attendace"
                android:textSize="15sp"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/btn_open_take_attendance"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/edittext2"
                android:text="@string/open"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3.7"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/uploadmatrialdoctor"
                android:layout_width="100sp"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:background="@drawable/backpack"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/material"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/upload_matriel"
                android:textSize="18sp"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/dr_upload_material"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/edittext2"
                android:text="@string/open"
                android:textSize="18sp"
                android:textStyle="bold"

                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.98"
            android:background="#000"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.98"
            android:background="#000"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3.7"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/makequzedoctor"
                android:layout_width="100sp"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/quiz"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/quizes"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/creat_new_quiz"
                android:textSize="15sp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/dr_make_quiz"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/edittext2"
                android:text="@string/open"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3.5"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/showgradestudent"
                android:layout_width="100sp"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:background="@drawable/grades"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/grades"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/show_grades"
                android:textSize="18sp"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/dr_show_all_grade"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/edittext2"
                android:text="@string/open"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#000"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.3"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    >
    <ImageButton
        android:id="@+id/dr_open_chat"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="25sp"
        android:padding="13dp"
        android:background="@drawable/chat"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/course_code_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        tools:text="coursecodedsdsdsds"

        />

    <Button
        android:id="@+id/copy_course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginHorizontal="10sp"
        android:text="@string/copy_id"
        android:backgroundTint="@color/toolbarcolor"
        />

</LinearLayout>




</LinearLayout>